package com.bober.notesapp.core.util

object TestTags {

    const val ORDER_SECTION = "ORDER_SECTION"
    const val TITLE_RADIO_BUTTON = "TITLE_RADIO_BUTTON"
    const val TITLE_TEXT_FIELD = "TITLE_TEXT_FIELD"
    const val CONTENT_TEXT_FIELD = "CONTENT_TEXT_FIELD"
}